Modernize empty collection usage in StandardHandlerConfig
Agent-Logs-Url: https://github.com/hazendaz/scriptable-dataset/sessions/2617cccc-0e1c-49fe-98e8-c9d4a8e81483

Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>